# terminal-serial

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  README_zh.md  config.example.json  terminal-serial.cdx.json  terminal-serial.cdx.xml
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
src/: cmd.rs  cmd.yml  config.rs  error.rs  event_log.rs  getch.rs  input.rs  keyboard.rs  lib.rs  log_reader.rs  macro_runner.rs  main.rs  mcp.rs  mcp_http.rs  parse.rs  serial_manager.rs  server.rs  session_log.rs  task.rs  telnet.rs  ui.rs  util.rs
