[package]
name = "terminal-serial"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "terminal-serial"
# path = "src/main.rs"

[dependencies]
clap = {version = "2.27.1", features = ["yaml"]}
serial = "0.4.0"
libc = "0.2.124"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[target.'cfg(not(windows))'.dependencies]
termios = "0.3.3"
