[package]
name = "terminal-serial"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "terminal-serial"
# path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
libc = "0.2.124"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(windows))'.dependencies]
termios = "0.3.3"

[profile.release]
opt-level = 3
lto = true
strip = true
