[package]
name = "terminal-serial"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
libc = "0.2.124"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
regex = "1"

[target.'cfg(not(windows))'.dependencies]
termios = "0.3.3"

[profile.release]
opt-level = 3
lto = true
strip = true
